# VIVATLAS

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  Skill-Atlas-Claude-Code-Prompt.md  VivAtlas-Claude-Code-Prompt.md  claude-start.cmd  claude-stop.cmd  docker-compose.yml  pyproject.toml  server-status.cmd  start.cmd  stop.cmd
.github/workflows/: docker.yml
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/vivatlas/app/: Auth.kt  LoginActivity.kt  MainActivity.kt  Prefs.kt  ResetPasswordActivity.kt  ServerDialog.kt  Session.kt  ShareActivity.kt  WebActivity.kt
android/app/src/main/res/drawable/: btn_primary.xml  card_bg.xml  dialog_bg.xml  field_bg.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_reset.xml  activity_web.xml  dialog_leave.xml  dialog_server.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
docker/: entrypoint.sh
docs/: DEPLOY-TRUENAS.md  MCP.md  PLAN.md
extension/: README.md  config.js  manifest.json  popup.css  popup.html  popup.js
scripts/: fetch_mock_repos.py  mock_repos.json  seed_mock.py  server.py
src/skill_atlas/: __init__.py  api.py  archive.py  auth.py  auth_web.py  changes.py  cli.py  config.py  db.py  detector.py  embeddings.py  filters.py  finder.py  import_run.py  importer.py  indexer.py  mcp_server.py  migrate.py  models.py  net.py  purposes.py  recommender.py  remap.py  scanner.py  search.py  security.py  settings_web.py  summarizer.py  tagger.py  twofactor.py  updater.py  upstream.py  upstream_sync.py  web.py
src/skill_atlas/ai/: __init__.py  base.py  google.py
src/skill_atlas/providers/: __init__.py  base.py  gitea.py  github.py
src/skill_atlas/static/: app.css
src/skill_atlas/templates/: add.html  artifact.html  auth.html  base.html  changes.html  index.html  recommend.html  settings.html
src/vivatlas/: __init__.py  admin_web.py  api.py  archive.py  auth.py  auth_web.py  avatars.py  categories.py  caticons.py  catnames.py  changes.py  cli.py  config.py  db.py  detector.py  embeddings.py  ext_api.py  filters.py  finder.py  i18n.py  import_run.py  importer.py  indexer.py  mailer.py  mcp_oauth.py  mcp_server.py  mcp_web.py  migrate.py  models.py  net.py  purposes.py  recommender.py  remap.py  runtime_settings.py  scanner.py  search.py  security.py  settings_web.py  summarizer.py  tagger.py  (+9 more)
src/vivatlas/ai/: __init__.py  base.py  google.py
src/vivatlas/providers/: __init__.py  base.py  gitea.py  github.py
src/vivatlas/static/: app.css  catmanage.js  dropdown.js  tooltip.js
src/vivatlas/templates/: _carditem.html  _catmanage.html  _catrow.html  _icons.html  add.html  admin.html  artifact.html  auth.html  base.html  changes.html  dev.html  help.html  index.html  mcp_consent.html  modal_base.html  recommend.html  settings.html
src/vivatlas/templates/email/: base.html  invite.html  invite.txt  password_reset.html  password_reset.txt  test.html  test.txt
tests/: conftest.py  test_archive.py  test_auth.py  test_avatars.py  test_categories.py  test_changes.py  test_config.py  test_detector.py  test_ext_api.py  test_filters.py  test_finder.py  test_gitea.py  test_github.py  test_google_ai.py  test_i18n.py  test_import_run.py  test_importer.py  test_indexer.py  test_mailer.py  test_mcp_server.py  test_ownership.py  test_password_reset.py  test_purposes.py  test_recommender.py  test_remap.py  test_reset_link.py  test_runtime_settings.py  test_scan_runner.py  test_scanner.py  test_security.py  test_tagger.py  test_updater.py  test_upstream.py  test_usericons.py  test_users.py  test_version.py
tests/e2e/: README.md  conftest.py  test_a11y.py
