[project]
name = "skill-atlas"
version = "0.1.0"
description = "Каталог скиллов, агентов и инструментов из Git-репозиториев"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "typer>=0.15",
    "numpy>=2.0",
    "jinja2>=3.1",
    "mcp>=1.2",
    # --- дверь ---
    # argon2 — не bcrypt: bcrypt молча режет пароль на 72 байте, а argon2id
    # берёт победитель конкурса хешей паролей и настраивается по памяти.
    "argon2-cffi>=23.1",
    # Подписанные метки времени для ссылок сброса и cookie. Своё подписывание
    # тут писать незачем — это ровно то место, где ошибаются.
    "itsdangerous>=2.2",
    # Коды двухэтапной проверки: TOTP по RFC 6238, как в Google Authenticator.
    "pyotp>=2.9",
    # QR для привязки приложения. Рисуем в SVG, поэтому PIL не нужен.
    "qrcode>=8.0",
    # Отправка почты, не блокируя сервер.
    "aiosmtplib>=3.0",
    # Шифрование чужих токенов в базе.
    "cryptography>=44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.8",
]

[project.scripts]
skill-atlas = "skill_atlas.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_atlas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
