[project]
name = "vivatlas"
version = "0.1.0"
description = "Catalogue of skills, agents and tools from Git repositories"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "typer>=0.15",
    "numpy>=2.0",
    "jinja2>=3.1",
    "mcp>=1.2",
    # --- door ---
    # argon2 — not bcrypt: bcrypt silently truncates the password at 72 bytes, while argon2id
    # is the password-hashing-competition winner and can be tuned by memory.
    "argon2-cffi>=23.1",
    # Signed timestamps for reset links and cookies. No reason to write our own
    # signing here — this is exactly the place where people get it wrong.
    "itsdangerous>=2.2",
    # Two-step verification codes: TOTP per RFC 6238, like in Google Authenticator.
    "pyotp>=2.9",
    # QR for linking the app. We draw it as SVG, so PIL isn't needed.
    "qrcode>=8.0",
    # Sending mail without blocking the server.
    "aiosmtplib>=3.0",
    # Encrypting third-party tokens in the database.
    "cryptography>=44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.8",
]

[project.scripts]
vivatlas = "vivatlas.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vivatlas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Translation files are data: long strings in three languages can't be split meaningfully.
"src/vivatlas/translations.py" = ["E501"]
"src/vivatlas/translations_bulk.py" = ["E501"]
